[package]
repository = "https://github.com/SuperInstance/ternary-counterpoint"
name = "ternary-counterpoint"
version = "0.1.0"
edition = "2021"
description = "Species counterpoint in ternary music theory — consonance, dissonance, voice leading, and forbidden parallels"
license = "MIT"
[dependencies]
